vprofilecharts/templates/vprodbdep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  selector:
    matchLabels:
      app: vprodb
  replicas: 1
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
      - name: vprodb
        image: kiranmorab/vprofiledb
        ports:
        - name: vprodb-port
          containerPort: 3306
        volumeMounts:
        - name: db-storage
          mountPath: /var/lib/mysql   # MySQL data dir
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-pv-claim
