vprofilecharts/templates/vproapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  type: ClusterIP        # ClusterIP is default
  selector:
    app: vproapp
  ports:
    - port: 8080         # ClusterIP port
      targetPort: 8080   # Container port
      protocol: TCP
